bug(elastic search): Ensures null vector safety and uses modern `toList()` stream collector.